--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.php",
-        "use": "@vercel-php"
+        "src": "enviar.php",
+        "use": "@vercel/php"
       }
     ],
     "routes": [
       {
-        "src": "/api/.*",
-        "dest": "/api/index.php"
+        "src": "/.*",
+        "dest": "enviar.php"
       }
     ]
   }
