--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,30 @@
     "version": 2,
     "builds": [
       {
-        "src": "enviar.php",
+        "src": "public/enviar.php",
         "use": "@vercel/php"
+      },
+      {
+        "src": "public/index.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "public/script.js",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "public/styles.css",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/.*",
-        "dest": "enviar.php"
+        "src": "/enviar",
+        "dest": "public/enviar.php"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "public/index.html"
       }
     ]
   }
